--- a/ayaya.html
+++ b/ayaya.html
@@ -32,7 +32,7 @@
             <br>
              <font size="4" color="red" face="Verdana"> <p align="right"><u> 80-555</u><i> Gdańsk</i>  ul.Jana Pawła 56  mieszkanie 24 </p> <br></font>
              <font color="yellow" size="3" face="Arial"> <p align="left">ulubiony aktor- <strike> very kox </strike> </p><br></font>
-             <font color="green" size="5" face="Courier New"><center><p>ulubiony zespul- ACBC </p></center><br></font>
+             <font color="green" size="5" face="Courier New"><center><p>ulubiony zespol- ACBC </p></center><br></font>
              <p align="left">data urodzenia- 17 kwietnia 2005 </p><br>
 
              H<sub>2</sub>SO<sub>4</sub>
