--- a/ayaya.html
+++ b/ayaya.html
@@ -6,7 +6,7 @@
              <title> jakub </title>
       </head>
       <body>
-            Jakub Pawella
+            NIGGA
             <p align="right"> <font color="red" size="1" face="Arial"> jakub </font> </p> <br>
             <p align="right"> <font color="blue" size="2" face="Arial"> jakub </font> </p> <br>
             <p align="right"> <font color="green" size="3" face="Arial"> jakub </font> </p> <br>
