--- a/walidacja_pawella.html
+++ b/walidacja_pawella.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 	<a href="index.html">wróć</a><br/><br/><br/>
-	<img src="blad_zdrojewski.png"/><br/><br/>
-	<img src="poprawa_zdrojewski.png"/> <br/><br/>
+	<img src="blad_pawella.png"/><br/><br/>
+	<img src="poprawa_pawella.png"/> <br/><br/>
 	</body>
 </html>
