--- a/poczta_pawella.html
+++ b/poczta_pawella.html
@@ -7,7 +7,7 @@
 	<body>
 	<a href="index.html">wróć</a>
 	<br/><br/>
-	<a href="filip123183@wp.pl"> poczta </a>
+	<a href="jakubp216@gmail.com"> poczta </a>
 	
 	
 	</body>
