--- a/formularz_pawella.html
+++ b/formularz_pawella.html
@@ -62,19 +62,19 @@
         </div>
         <div style="clear:both"></div>
         <div id="haslo">
-            <h3>Hasło do formularza</h3>
+            <h3>Haslo do formularza</h3>
 
             <input type="password" />
 
         </div>
         <div id="wyslij">
 
-            <input type="submit" value="Wyślij"><br/>
+            <input type="submit" value="Wyslij"><br/>
 
         </div>
         <div id="wyczysc">
 
-            <input type="reset" value="Wyczść dane">
+            <input type="reset" value="Wyczysc dane">
 
         </div>
     </from>
