--- a/formularz_pawella.html
+++ b/formularz_pawella.html
@@ -69,7 +69,9 @@
         </div>
         <div id="wyslij">
 
-            <input type="submit" value="Wyslij"><br/>
+            <form action="*">
+<button type="submit">< alt="wyślij" /></button>
+</form>
 
         </div>
         <div id="wyczysc">
