--- a/formularz_pawella.html
+++ b/formularz_pawella.html
@@ -12,7 +12,7 @@
 <body>
     <from method="post">
         <div id="tytul">
-            FORMULARZ ZGŁOSZENIOWY DO <br/> ADMINISTRACJI
+            FORMULARZ ZGŁOSZENIOWY DO <br/> DRUZYNY W LOLU
             <br/>
         </div>
         <div id="imie">
