--- a/formularz_pawella.html
+++ b/formularz_pawella.html
@@ -67,7 +67,7 @@
             <input type="password" />
 
         </div>
-        <div id="wyslij">
+        <div id="wyślij">
 
             <form action="*">
 <button type="submit">< alt="wyślij" /></button>
