--- a/formularz_pawella.html
+++ b/formularz_pawella.html
@@ -67,16 +67,16 @@
             <input type="password" />
 
         </div>
-        <div id="wyślij">
+        <div id="wyslij">
 
             <form action="*">
-<button type="submit">< alt="wyślij" /></button>
+<button type="submit">< alt="wyslij" /></button>
 </form>
 
         </div>
         <div id="wyczysc">
 
-            <input type="reset" value="Wyczysc dane">
+            <input type="reset" value="wyczysc dane">
 
         </div>
     </from>
