--- a/formularz_pawella.html
+++ b/formularz_pawella.html
@@ -70,13 +70,13 @@
         <div id="wyslij">
 
             <form action="*">
-<button type="submit">< alt="wyslij" /></button>
+<button type="submit">< alt="wyslij" ></button>
 </form>
 
         </div>
-        <div id="wyczysc">
+        <div id="Wyczysc">
 
-            <input type="reset" value="wyczysc dane">
+            <input type="reset" value="Wyczysc dane">
 
         </div>
     </from>
