--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@ Rozmawia dwóch informatyków, jeden mówi do drugiego:<br/>
 <br/>
 <br/>
 <br/>
+	      <a name="srodek"></a>
              
              <b> nazwisko ucznia &nbsp; &nbsp;imię ucznia</b> <br/>
 			 <b> Pawella &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Jakub</b>
