--- a/formularz_pawella.html
+++ b/formularz_pawella.html
@@ -70,7 +70,7 @@
         <div id="wyslij">
 
             <form action="*">
-<button type="submit">< alt="wyslij" ></button>
+<button type="submit">< "wyslij" ></button>
 </form>
 
         </div>
